kustomize/vote/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: instavote
  labels:
    app: vote
    tier: front
  name: vote
spec:
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
        tier: front
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: vote
        image: cfathi/vote
        ports:
          - containerPort: 80
            name: http
          - containerPort: 9102
            name: metrics
