kustomize/vote/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: instavote
  labels:
    app: vote
    tier: front
  name: vote
spec:
  type: ClusterIP  # ← changed from NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: vote
